Styles about and fixes bleed

--- a/css/about.css
+++ b/css/about.css
@@ -52,3 +52,64 @@ h2.team{padding-top: 0.25em;}
         margin: 0 auto;
     }
 }
+/* desktop 768-992px*/
+@media (min-width: 768px){
+    /* space between hero and mission */
+    .mission{margin-top: 1em}
+    /*  */
+    .john, .phalse{
+        padding-top: 0.5em;
+    }
+    /* styles meet the team */
+    .team{
+        /* align all team text left */
+        text-align: left;
+    }
+    /* remove padding for images in team */
+    .team img{margin: 0}
+    /* styles first 3 sections */
+    .mission, .vision, .values{
+        text-align: left;
+        padding: 0.25em 0 0.5em 0.25em;
+        /* using margins to space sections */
+        margin-bottom: 0.5em;
+    }
+    .jackBio, .phalseBio{padding: 0.25em 0 0.75em 0;}
+    /* using grid 4 col 1 row for each team member's biography+picture */
+    .jackBio, .johnBio, .phalseBio {
+        display: grid;
+        /* creates 1 row */
+        grid-template-rows: 1fr;
+        /* creates 4 columns of equal width */
+        grid-template-columns: repeat(4, 1fr);
+        gap: 0.25em;
+        margin-bottom: 0.25em;
+    }
+    /* align john's h3 and h4 to the right */
+    .john h3, .john h4{
+        text-align: right;
+        /* counter border around image */
+        margin-right: 5px;
+    }
+    /* makes biography occupy first 3 spaces for john */
+    .johnBio p{
+        /* change order and defines where p will be */
+        order: -1;
+        grid-column: 1/span 3;
+        padding: 0em;
+        /* vertically center p and add 5 px to left */
+        margin: auto 0 auto 5px;
+    }
+    /* makes biography occupy first 3 spaces for john */
+    .johnBio img{
+        grid-column: 4;
+    }
+    /* makes biography p occupy 3 col for Jack and Phalse */
+    .jackBio p, .phalseBio p{
+        grid-column: 2/span 4;
+        padding: 0em;
+        /* vertically center p */
+        margin: auto 0;
+    }
+    
+}
